--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "main": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "node-rdkafka": "^2.15.0"
+    "ip": "^1.1.8",
+    "kafkajs": "^2.2.4"
   }
 }
