--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "ip": "^1.1.8",
-    "kafkajs": "^2.2.4"
+    "kafkajs": "^2.2.4",
+    "properties-reader": "^2.2.0"
   }
 }
