--- a/Schema_Generation/package.json
+++ b/Schema_Generation/package.json
@@ -4,8 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "main": "node index.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "avsc": "^5.7.7",
+    "jsonfile": "^6.1.0",
+    "jsonpath": "^1.1.1"
+  }
 }
