--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "avsc": "^5.7.7",
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "jsonfile": "^6.1.0",
     "jsonpath": "^1.1.1"
