--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/compute": "^3.9.1",
     "avsc": "^5.7.7",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
