--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "jsonfile": "^6.1.0",
-    "jsonpath": "^1.1.1"
+    "jsonpath": "^1.1.1",
+    "lodash": "^4.17.21"
   }
 }
